# sample-langchain-mcp-client

./: .gitignore  README.md  main.py  pyproject.toml
client/: agent_backend.py  bedrock_agent.py  client.py  constants.py  langchain_agent.py  llm_provider.py  mcp_client_backend.py  messages.py  oauth2.py
client/bedrock/: bedrock_agent_backend.py  bedrock_mcp_client_backend.py  bedrock_tool.py  mcp_client_backend.py
client/langchain/: langchain_agent_backend.py  langchain_mcp_client_backend.py  mcp_client_backend.py
web/: app.js  styles.css  web_ui.html  web_ui_server.py
