[project]
name = "visier-mcp-langchain-client"
version = "0.1.0"
description = "Visier MCP Langchain client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.8",
    "langchain-aws>=1.2.2",
    "langchain_anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "langchain-ollama>=1.0.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.7"          
]